# Fencingrobot

wj_/wj_openCV_D3/: CMakeLists.txt  mainpage.dox  package.xml
wj_/wj_openCV_D3/include/openCV/: main_window.hpp  qnode.hpp
wj_/wj_openCV_D3/src/: main.cpp  main_window.cpp  qnode.cpp
wj_/wj_openCV_D3/ui/: main_window.ui.autosave
